# aiops-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json  settings.local.json
.claude/rules/: agents.md  infrastructure.md  references.md  tools.md
agents/: aiops_agent.py  mcp_manager.py  memory.py  observability.py  runtime.py  runtime_base.py  utils.py
agents/cost/: agent.py  runtime.py
agents/inventory/: agent.py  runtime.py
agents/monitoring/: agent.py  runtime.py
agents/resource/: agent.py  runtime.py
agents/security/: agent.py  runtime.py
agents/super/: agent.py  runtime.py
cloudformation/: deploy.sh  phase1-base-infra.yaml  phase2-agentcore-prereq.yaml  phase3-ecs-steampipe.yaml  vscode_streamlit_server.yaml
configs/: cost.yaml  inventory.yaml  mcp_servers.yaml  monitoring.yaml  resource.yaml  security.yaml  super.yaml
dashboard/: app.py  auth.py  chat_memory.py  requirements.txt
dashboard/pages/: 1_💰_Cost.py  2_🔒_Security.py  3_🏗️_Resources.py  4_📋_Inventory.py  5_💬_AI_Chat.py
docs/architecture/: REFERENCE_REPOS.md
ecs/: Dockerfile  entrypoint.sh  mcp_server.py  requirements.txt
gateway/: api_spec.json  api_spec_steampipe.json  lambda_handler.py  setup_gateway.py
prerequisite/: deploy.sh  infrastructure.yaml
scripts/: cleanup.sh  deploy_runtime.sh  run_with_otel.sh  setup-steampipe.sh  setup.sh  start_dashboard.sh
src/: __init__.py
src/agents/: __init__.py
src/agents/inventory/: __init__.py  agent.py
src/agents/monitoring/: __init__.py  agent.py  tools.py
src/agents/resource_manager/: __init__.py  agent.py
src/dashboard/: app.py
src/dashboard/pages/: 1_summary.py  2_ec2.py  3_s3.py  4_security.py  5_network.py
src/gateway/: __init__.py  config.py  mcp_client.py
src/shared/: __init__.py
src/tools/network/: __init__.py  vpc_tools.py
src/tools/steampipe/: __init__.py  inventory.py
tests/: __init__.py  test_local.py  test_tools.py
tests/unit/: test_monitoring_tools.py
tools/: cloudwatch_tools.py  cost_explorer_tools.py  ec2_tools.py  resource_inventory.py  security_tools.py  steampipe_tools.py  vpc_tools.py
